# protonply

./: CMakeLists.txt  README.md  conan.cmake  conancommands  conanfile.txt  main.cpp  mainwindow.h  org.flatpak.protonply.yml  protonply_config.json
src/: ge_proton.cpp  ge_proton.h  installed_protons.cpp  installed_protons.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  protons.cpp  protons.h  untar.cpp  untar.h
